--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Datatables BS5
+@import "~datatables.net-bs5/css/dataTables.bootstrap5.css";
+
+//Swal Alert
+@import 'sweetalert2/src/sweetalert2.scss'
