--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -64,7 +64,7 @@ body {
     border-radius: 12px;
     background-color: #eeeeeed2;
 }
-.login-img {
+.login-img img{
     padding: 0.8rem;
     width: 80%;
     display: block;
@@ -106,6 +106,11 @@ body {
     font-size: 20px;
     float: right;
 }
+.material-icons-sidebar-dropdown{
+    vertical-align: bottom;
+    font-size: 20px;
+    float: right;
+}
 .material-icons-newrecord {
     vertical-align: bottom;
     width: 2px;
@@ -143,49 +148,38 @@ body {
  float: right;
 }
 
+  
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+display: none;
+position: relative;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+visibility: hidden;
+z-index: 1;
 
 
-/* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
+}
   
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+    display:block;
+    visibility: visible;
+    transition: all .25s ease;
+    -webkit-transition: all .25s ease;
+-moz-transition: all .25s ease;
+-ms-transition: all .25s ease;
+-o-transition: all .25s ease;
+
+}
+
+/* Links inside the dropdown */
+/* .dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+} */
   
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
+/* Change color of dropdown links on hover */
+/* .dropdown-content a:hover {background-color: #ddd} */
   
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    /* position: absolute; */
-    background-color: #f1f1f1;
-    min-width: 12rem;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
