--- a/public/css/media-query.css
+++ b/public/css/media-query.css
@@ -23,11 +23,15 @@
         height: 100%;
     }
     #page-content-wrapper {
-        min-width: 0;
+        min-width: 80vw;
         width: 100%;
     }
     #wrapper.toggled #sidebar-wrapper {
         margin-left: -12rem;
+        min-height: 100%;
+    }
+    body {
+        overflow-x: visible !important;
     }
 }
 
