--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -16,7 +16,9 @@ body {
     border-radius: 12px;
     padding: 0% 0.785% !important;
 }
-
+#wrapper {
+    min-height: 100vh;
+}
 /* custom sidebar */
 #sidebar-wrapper img { 
     width: 5vw;
@@ -33,18 +35,14 @@ body {
     font-size: 0.8em;
     padding: 0em 0.75rem !important;
 }
-aside {
-    height: 100%;
-}
 #sidebar-wrapper {
-    min-height: 100vh;
+    min-height: 100%;
     margin-left: -12rem;
     -webkit-transition: margin .25s ease-out;
     -moz-transition: margin .25s ease-out;
     -o-transition: margin .25s ease-out;
     transition: margin .25s ease-out;
 }
-
 .sidebar-button button:hover{
     color: rgb(201, 201, 201);
 }
