--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -192,3 +192,16 @@ body {
 .profile-details #table-show-record td{
     padding: 0 !important;
 }
+
+/* custom input=number  */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
